@@ -2,6 +2,7 @@ package dev.berke.app.product.application;
 
 import dev.berke.app.category.domain.model.Category;
 import dev.berke.app.category.domain.repository.CategoryRepository;
+import dev.berke.app.product.api.dto.ProductUpdateRequest;
 import dev.berke.app.product.domain.model.Product;
 import dev.berke.app.product.infrastructure.messaging.ProductEventProducer;
 import dev.berke.app.product.api.dto.ProductCreateRequest;
@@ -12,15 +13,15 @@ import dev.berke.app.shared.exception.CategoryNotFoundException;
 import dev.berke.app.shared.exception.ProductAlreadyExistsException;
 import dev.berke.app.shared.exception.ProductNotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.apache.kafka.common.errors.InvalidRequestException;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class ProductService {
 
     private final ProductRepository productRepository;
@@ -28,73 +29,97 @@ public class ProductService {
     private final ProductMapper productMapper;
     private final ProductEventProducer productEventProducer;
 
-    public ProductResponse createProduct(ProductCreateRequest productCreateRequest) {
-        if(productRepository.existsBySku(productCreateRequest.sku())) {
-            throw new ProductAlreadyExistsException(
-                    String.format("Product with this SKU code already exists: %s",
-                            productCreateRequest.sku())
-            );
+    @Transactional
+    public ProductResponse createProduct(ProductCreateRequest request) {
+        if (productRepository.existsBySku(request.sku())) {
+            throw new ProductAlreadyExistsException(request.sku());
         }
 
-        Integer categoryId = productCreateRequest.categoryId();
+        Category category = categoryRepository.findById(request.categoryId())
+                .orElseThrow(() -> new CategoryNotFoundException(request.categoryId().toString()));
 
-        Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new CategoryNotFoundException(
-                        String.format("Category not found with ID: %s", categoryId)
-                ));
+        Product product = productMapper.toProduct(request, category);
 
-        Product product = productMapper.toProduct(productCreateRequest, category);
         Product savedProduct = productRepository.save(product);
 
+        log.info("Product created with ID: {}", savedProduct.getProductId());
         return productMapper.toProductResponse(savedProduct);
     }
 
     @Transactional
-    public ProductResponse setProductStatus(Integer productId, boolean newStatus) {
-        Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new ProductNotFoundException(
-                        String.format("Product not found with ID: %s", productId)
-                ));
+    public ProductResponse updateProductDetails(
+            Integer productId,
+            ProductUpdateRequest productUpdateRequest
+    ) {
+        Product product = getProductOrThrow(productId);
 
-        if (product.isActive() == newStatus) {
-            throw new InvalidRequestException(
-                    String.format("Product status is already %s",
-                    newStatus ? "Active" : "Inactive")
-            );
-        }
+        product.updateDetails(
+                productUpdateRequest.productName(),
+                productUpdateRequest.basePrice(),
+                productUpdateRequest.minPrice()
+        );
 
-        product.setStatus(newStatus);
-        Product updatedProduct = productRepository.save(product);
-
-        if (newStatus) {
-            productEventProducer.sendProductPublishedEvent(updatedProduct);
-        } else {
-            productEventProducer.sendProductUnpublishedEvent(updatedProduct.getProductId());
-        }
-
-        return productMapper.toProductResponse(updatedProduct);
+        Product savedProduct = productRepository.save(product);
+        return productMapper.toProductResponse(savedProduct);
     }
 
+    @Transactional
+    public ProductResponse changeProductCategory(Integer productId, Integer newCategoryId) {
+        Product product = getProductOrThrow(productId);
+
+        Category newCategory = categoryRepository.findById(newCategoryId)
+                .orElseThrow(() -> new CategoryNotFoundException(
+                        String.format("Category not found with ID: %s", newCategoryId)
+                ));
+
+        product.changeCategory(newCategory);
+
+        Product savedProduct = productRepository.save(product);
+        return productMapper.toProductResponse(savedProduct);
+    }
+
+    @Transactional
+    public void publishProduct(Integer productId) {
+        Product product = getProductOrThrow(productId);
+        product.publish();
+
+        Product savedProduct = productRepository.save(product);
+
+        productEventProducer.sendProductPublishedEvent(savedProduct);
+    }
+
+    @Transactional
+    public void unpublishProduct(Integer productId) {
+        Product product = getProductOrThrow(productId);
+        product.unpublish();
+
+        productRepository.save(product);
+
+        productEventProducer.sendProductUnpublishedEvent(product.getProductId());
+    }
+
+    @Transactional(readOnly = true)
     public ProductResponse getProductById(Integer productId) {
-        return productRepository.findById(productId)
-                .map(productMapper::toProductResponse)
-                .orElseThrow(() -> new ProductNotFoundException(
-                        String.format("Product not found for customer ID: %s", productId)
-                ));
+        return productMapper.toProductResponse(getProductOrThrow(productId));
     }
 
+    @Transactional(readOnly = true)
     public List<ProductResponse> getAllProducts() {
         return productRepository.findAll()
                 .stream()
                 .map(productMapper::toProductResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Transactional(readOnly = true)
     public Integer getCategoryIdOfProduct(Integer productId) {
+        return getProductOrThrow(productId).getCategory().getCategoryId();
+    }
+
+    private Product getProductOrThrow(Integer productId) {
         return productRepository.findById(productId)
-                .map(product -> product.getCategory().getCategoryId())
                 .orElseThrow(() -> new ProductNotFoundException(
-                        String.format("Product not found for customer ID: %s", productId)
+                        String.format("Product not found with ID: %s", productId)
                 ));
     }
 }
